Signed-off-by: szh 修复划线删除点击崩溃bug